--- a/src/com/hektor7/noteTakingApp/ui/fxml/AddEditUI.fxml
+++ b/src/com/hektor7/noteTakingApp/ui/fxml/AddEditUI.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
-      prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.51" xmlns:fx="http://javafx.com/fxml/1">
+      prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.51" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.hektor7.noteTakingApp.controllers.ui.AddEditUIController">
     <children>
         <HBox prefHeight="48.0" prefWidth="393.0">
             <children>
@@ -15,7 +16,7 @@
                     <children>
                         <ImageView fitHeight="66.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../../resources/pencil.png"/>
+                                <Image url="@assets/pencil.png"/>
                             </image>
                             <HBox.margin>
                                 <Insets left="5.0" top="5.0"/>
@@ -31,8 +32,8 @@
                 </Label>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Button fx:id="btnNewNote" mnemonicParsing="false" onAction="#doNewNote" prefHeight="67.0"
-                                prefWidth="83.0" text="New Note">
+                        <Button fx:id="btnNotesList" mnemonicParsing="false" onAction="#doNotesList" prefHeight="67.0"
+                                prefWidth="83.0" text="Notes List">
                             <HBox.margin>
                                 <Insets right="5.0" top="5.0"/>
                             </HBox.margin>
@@ -44,38 +45,39 @@
                 </HBox>
             </children>
         </HBox>
-        <BorderPane prefHeight="36.0" prefWidth="393.0">
-            <left>
-                <TextField prefHeight="26.0" prefWidth="272.0" BorderPane.alignment="CENTER">
-                    <BorderPane.margin>
-                        <Insets left="5.0"/>
-                    </BorderPane.margin>
-                </TextField>
-            </left>
-            <center>
-                <Separator orientation="VERTICAL" prefHeight="36.0" prefWidth="0.0" BorderPane.alignment="CENTER"/>
-            </center>
-            <right>
-                <Label text="Label" BorderPane.alignment="CENTER">
-                    <BorderPane.margin>
-                        <Insets right="5.0"/>
-                    </BorderPane.margin>
+        <VBox prefHeight="496.0" prefWidth="400.0">
+            <children>
+                <Label text="Note Title">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0" top="20.0"/>
+                    </VBox.margin>
                 </Label>
-            </right>
-        </BorderPane>
-        <TableView prefHeight="470.0" prefWidth="393.0">
-            <columns>
-                <TableColumn prefWidth="111.0" text="Title"/>
-                <TableColumn prefWidth="281.0" text="Description"/>
-            </columns>
-        </TableView>
+                <TextField fx:id="txNoteTitle">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </TextField>
+                <Label text="Note Description">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Label>
+                <TextArea fx:id="txNoteDescription" prefHeight="366.0" prefWidth="400.0">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </TextArea>
+            </children>
+        </VBox>
         <Separator prefWidth="200.0"/>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
             <children>
-                <Button fx:id="btnDeleteNote" mnemonicParsing="false" onAction="#doDeleteNote" prefHeight="35.0"
-                        prefWidth="100.0" text="Delete"/>
-                <Button fx:id="btnEditNote" mnemonicParsing="false" onAction="#doEditNote" prefHeight="35.0"
-                        prefWidth="100.0" text="Edit"/>
+                <Button fx:id="btnCancelEdit" mnemonicParsing="false" onAction="#doCancel" prefHeight="35.0"
+                        prefWidth="100.0" text="Cancel"/>
+                <Button fx:id="btnClearEdit" mnemonicParsing="false" onAction="#doClear" prefHeight="35.0"
+                        prefWidth="100.0" text="Clear"/>
+                <Button fx:id="btnSaveEdit" mnemonicParsing="false" onAction="#doSave" prefHeight="35.0"
+                        prefWidth="100.0" text="Save"/>
             </children>
         </HBox>
     </children>
